# mim_rs_485

./: .gitignore  aa_box.py  alert_unit.py  alert_unit.ui  alert_win.py  cmd_gen.py  crc16_ccitt_table.py  crc_test.py  create_py_from.bat  exp_parcer.py  exp_visualisation.py  experiment copy.py  experiment.py  float_32_cnvrt.py  init_cfg.json  live_button.bat  live_button.py  live_button_win.py  live_button_win.ui  main.py  mim.py  mim_parser.py  mim_rs_485.py  mim_rs_485_speed_test.py  pyinstaller_setup.bat  pyproject.toml  segmented_data.py  tempCodeRunnerFile.py  test.py  test.txt  tmp_test.py  transaction_list.py  tx_data.py  Примеры пакетов кнопки жизни.txt
Exp_csv_result/2024-10-12 01_49_12/: dir_name_Experiment_data_Ch_0.csv  dir_name_Experiment_data_Ch_50.csv
Exp_csv_result/2024-10-12 02_04_39/: dir_name_Experiment_data_Ch_320.csv  dir_name_Experiment_data_Ch_321.csv  dir_name_Experiment_data_Ch_322.csv  dir_name_Experiment_data_Ch_323.csv  dir_name_Experiment_data_Ch_324.csv  dir_name_Experiment_data_Ch_325.csv  dir_name_Experiment_data_Ch_326.csv  dir_name_Experiment_data_Ch_327.csv  dir_name_Experiment_data_Ch_328.csv  dir_name_Experiment_data_Ch_330.csv  dir_name_Experiment_data_Ch_331.csv  dir_name_Experiment_data_Ch_332.csv  dir_name_Experiment_data_Ch_334.csv  dir_name_Experiment_data_Ch_335.csv
Exp_csv_result/2024-10-12 02_25_23/: dir_name_Experiment_data_Ch_129.csv  dir_name_Experiment_data_Ch_132.csv  (+24 more)
visual/: create_py_from.bat  data_vis.py  data_vis_unit.py  data_vis_unit.ui  data_vis_widget.py  data_vis_widget.ui
(+32 files in other folders)
